--- a/react-game/src/components/Game/_Game.scss
+++ b/react-game/src/components/Game/_Game.scss
@@ -6,6 +6,16 @@
 .card {
   cursor: pointer;
 }
+
+.fields{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.game-fields__grid{
+  position:relative;
+}
 .overflow{
   position: absolute;
   top: 0;
