feat: add styling components

--- a/react-game/src/index.scss
+++ b/react-game/src/index.scss
@@ -11,9 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.App{
-  height: 100vh;
-}
+// .App{
+//   height: 100vh;
+// }
 footer{
   display: flex;
   flex-direction: row;
